# wolf_descriptions

./: README.md
a1_description/: CMakeLists.txt
a1_description/params/: a1_params.yaml
a1_description/params/navigation/: artifacts_costmap_params.yaml
a1_description/plotjuggler/: a1.xml
a1_description/robots/: a1.srdf.xacro  a1.urdf.xacro
a1_description/rviz/: a1_nav.rviz  a1_wbc.rviz
a1_description/urdfs/: const.xacro  leg.xacro
aliengo_description/params/: aliengo_kinova_params.yaml  aliengo_params.yaml
aliengo_description/params/navigation/: artifacts_costmap_params.yaml  common_costmap_params.yaml  local_costmap_params.yaml  (+2 more)
aliengo_description/plotjuggler/: aliengo.xml
aliengo_description/robots/: aliengo.srdf.xacro  aliengo.urdf.xacro
aliengo_description/rviz/: aliengo_nav.rviz
aliengo_description/urdfs/: accessories.urdf.xacro  leg.xacro
anymal_description/: CMakeLists.txt
anymal_description/params/: anymal_params.yaml
anymal_description/plotjuggler/: anymal.xml
anymal_description/robots/: anymal.srdf.xacro  anymal.urdf.xacro
anymalc_description/: CMakeLists.txt  package.xml
anymalc_description/params/: anymalc_params.yaml
anymalc_description/params/navigation/: common_costmap_params.yaml  move_base_params.yaml  odom_params.yaml  planners_params.yaml
anymalc_description/plotjuggler/: anymalc.xml
anymalc_description/robots/: anymalc.srdf.xacro  anymalc.urdf.xacro
anymalc_description/rviz/: anymalc_nav.rviz  anymalc_nav_loc.rviz  anymalc_wbc.rviz
go1_description/: CMakeLists.txt  package.xml
go1_description/meshes/: trunk.dae
go1_description/params/: go1_params.yaml
go1_description/plotjuggler/: go1.xml
go1_description/robots/: go1.srdf.xacro  go1.urdf.xacro
go1_description/rviz/: go1_nav.rviz  go1_wbc.rviz
go1_description/urdfs/: accessories.urdf.xacro  const.xacro  depthCamera.xacro  leg.xacro  robot.xacro  ultraSound.xacro
hyq_description/params/: hyq_gen3kinova_params.yaml  hyq_kinova_params.yaml  hyq_params.yaml  hyq_teleop_params.yaml
hyq_description/plotjuggler/: hyq.xml
hyq_description/robots/: hyq.srdf.xacro  hyq.urdf.xacro  hyq_gen3kinova.srdf.xacro  hyq_kinova.srdf.xacro  hyq_teleop.srdf.xacro
hyq_description/rviz/: hyq_wbc.rviz
kinova_description/: CMakeLists.txt  package.xml
kinova_description/urdf/: kinova_common.xacro  kinova_inertial.xacro
minicheetah_description/: CMakeLists.txt  package.xml
minicheetah_description/params/: minicheetah_params.yaml
minicheetah_description/plotjuggler/: minicheetah.xml
minicheetah_description/robots/: minicheetah.srdf.xacro  minicheetah.urdf.xacro
sensors_description/: CMakeLists.txt  package.xml
sensors_description/include/ros2/sensors_description/: gazebo_ros_realsense.h
sensors_description/include/sensors_description/: gazebo_ros_realsense.h
sensors_description/src/: MultiSenseSLPlugin.cpp
sensors_description/src/ros/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
sensors_description/src/ros2/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
sensors_description/urdfs/sensors/: _d435.urdf.xacro  bumblebee.urdf.xacro  gps.gazebo.xacro  hokuyo_laser.urdf.xacro  imu.gazebo.xacro  kinect.urdf.xacro  kvh_1775_imu.urdf.xacro  realsense.gazebo.urdf.xacro  realsense_d435.gazebo.xacro  realsense_d435.urdf.xacro  realsense_d455.gazebo.xacro  realsense_d455.urdf.xacro  realsense_t265.urdf.xacro  realsense_t265.xacro  velodyne.gazebo.xacro  velodyne.urdf.xacro  vislab_3dve.urdf.xacro  wideangle_camera.urdf.xacro  zed_mini.gazebo.xacro  zed_mini.urdf.xacro  zed_mini.xacro
solo_description/params/: solo_params.yaml
solo_description/plotjuggler/: solo.xml
solo_description/robots/: solo.srdf.xacro  solo.urdf.xacro
solo_description/urdfs/: leg.xacro
spot_description/: CMakeLists.txt  package.xml
spot_description/gazebo_model/: model.config  model.sdf
spot_description/meshes/: body_collision_low.stl  front_left_hip_collision_low.stl  front_left_lower_leg_collision_low.stl  front_left_upper_leg_collision_low.stl  front_right_hip_collision_low.stl  front_right_lower_leg_collision_low.stl  front_right_upper_leg_collision_low.stl  rear_left_hip_collision_low.stl  rear_left_lower_leg_collision_low.stl  rear_left_upper_leg_collision_low.stl  rear_right_hip_collision_low.stl  rear_right_lower_leg_collision_low.stl  rear_right_upper_leg_collision_low.stl
spot_description/params/: spot_kinova_params.yaml  spot_params.ros2.yaml  spot_params.yaml
spot_description/params/navigation/: 3d_odom_params.yaml  artifacts_costmap_params.yaml  base_local_planner_params.yaml  common_costmap_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_odom_params.yaml  global_robot_localization_params.yaml  local_costmap_params.yaml  local_odom_params.yaml  local_robot_localization_params.yaml  move_base_params.yaml  navsat_transform_params.yaml  odom_params.yaml  planners_params.yaml
spot_description/params/navigation/tasks/: exploration.yaml  goto.yaml  plugins.yaml  waypoints.yaml
spot_description/plotjuggler/: spot.xml
spot_description/robots/: spot.srdf.xacro  spot.urdf.xacro  spot_kinova.srdf.xacro
spot_description/rviz/: spot_nav.rviz  spot_nav_loc.rviz  spot_wbc.rviz
spot_description/urdfs/: accessories.urdf.xacro
wolf_description_utils/: CMakeLists.txt  package.xml
wolf_description_utils/launch/: standalone.launch  standalone.launch.xml  upload.launch  upload.launch.xml  world.launch  world.launch.xml
wolf_description_utils/scripts/: create_gazebo_model.sh  create_urdf_model.sh  description_loader  go0
wolf_description_utils/scripts/ros/: go0
wolf_description_utils/scripts/ros2/: go0
wolf_description_utils/urdfs/: arm.hardware.xacro  gazebo.urdf.xacro  gazebo.urdf.xacro.autosave  ignition.urdf.xacro  imu.hardware.xacro  leg.gazebo.xacro  leg.hardware.xacro  leg.transmission.xacro
ylo2_description/params/: ylo2_params.yaml
ylo2_description/plotjuggler/: ylo2.xml
ylo2_description/robots/: ylo2.srdf.xacro  ylo2.urdf.xacro
ylo2_description/rviz/: ylo2_wbc.rviz
ylo2_description/urdfs/: const.xacro  leg.xacro
(+27 files in other folders)
