<?xml version="1.0"?>

<package format="2">

  <name>anymalc_description</name>
  <version>1.0.2</version>
  <description>ANYmal C Description Package</description>

  <license>BSD-3</license>

  <author email="lisler@anybotics.com">Linus Isler</author>
  <maintainer email="lisler@anybotics.com">Linus Isler</maintainer>
  <maintainer email="rdiethelm@anybotics.com">Remo Diethelm</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>sensors_description</exec_depend>
  <exec_depend>wolf_description_utils</exec_depend>

</package>
