<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensors_description</name>
  <version>0.0.1</version>
  <description>
	This package contains the description (mechanical, kinematic, visual,
  plugin, etc.) of various sensors used in robotics. The files in this package
  are parsed and used by a variety of other components. Most users will
  not interact directly with this package.
  </description>
  <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>

  <license>GNU General Public License v3.0</license>

  <author>Gennaro Raiola</author>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo</build_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <export>
    <gazebo_ros
      plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models"
      />
  </export>

</package>
