<?xml version="1.0"?>
<package format="2">
    <name>wolf_description_utils</name>
    <version>0.0.1</version>
    <description>WoLF: Whole-body Locomotion Framework for quadruped robots. This package contains common files used in the robot descriptions.</description>

    <maintainer email="gennaro.raiola@gmail.com">Gennaro Raiola</maintainer>
    <author>Gennaro Raiola</author>
    <license>GNU General Public License v3.0</license>

    <buildtool_depend>catkin</buildtool_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>

</package>
